--- a/ChangeLog
+++ b/ChangeLog
@@ -523,3 +523,5 @@
 	* Fixed a regression that broke the 'make deb' target.
 2025-04-08 Fred Gleason <fredg@paravelsystems.com>
 	* Cleaned up Qt5 warnings.
+2025-04-08 Fred Gleason <fredg@paravelsystems.com>
+	* Updated Qt5 dependency to Qt6.
